# Compose2023Project

./: README.md  android.keystore  build.gradle  settings.gradle
Chapter2/: build.gradle
Chapter2/release/: Chapter2-release.apk  output-metadata.json
Chapter2/src/main/: AndroidManifest.xml
Chapter2/src/main/res/values/: themes.xml
SNWeather/: README.md  build.gradle  proguard-rules.pro
SNWeather/libs/: BaiduLBS_AndroidSDK_Lib.aar
SNWeather/release/: SNWeather-release.apk  output-metadata.json
SNWeather/src/main/: AndroidManifest.xml
SNWeather/src/main/cpp/: CMakeLists.txt  native-lib.cpp
SNWeather/src/main/res/values/: colors.xml  strings.xml
bsdiff/: build.gradle
bsdiff/debug/: output-metadata.json
bsdiff/src/main/: AndroidManifest.xml
bsdiff/src/main/cpp/: CMakeLists.txt  bspatch.c  native-lib.cpp
bsdiff/src/main/cpp/libzip/: CMakeLists.txt
bsdiff/src/main/res/layout/: activity_main.xml
cameraxapp/: build.gradle
coroutinedemo/: build.gradle
coroutinedemo/src/main/res/values/: strings.xml
coroutinedemo/src/main/res/values-night/: themes.xml
customview/: build.gradle
customview/src/main/res/layout/: activity_main.xml
databindingdemo/: build.gradle
databindingdemo/src/main/: AndroidManifest.xml
databindingdemo/src/main/res/layout/: activity_main.xml  rv_item_view.xml
datastore/: build.gradle
datastore/src/main/res/layout/: activity_main.xml
facetracing/: README.md  build.gradle
facetracing/debug/: output-metadata.json
facetracing/src/main/: AndroidManifest.xml
facetracing/src/main/cpp/: CMakeLists.txt  FaceTracking.h  JavaCallHelper.cpp  JavaCallHelper.h  macro.h  native-lib.cpp
facetracing/src/main/res/layout/: activity_main.xml
facetracing/src/main/res/values/: strings.xml  themes.xml
ffmpegdemo/: README.md  build.gradle
ffmpegdemo/release/: output-metadata.json
ffmpegdemo/src/main/: AndroidManifest.xml
ffmpegdemo/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.cpp  BaseChannel.h  CMakeLists.txt  DNFFmpeg.cpp  DNFFmpeg.h  JavaCallHelper.cpp  JavaCallHelper.h  SafeQueue.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp
ffmpegdemo/src/main/cpp/include/libavcodec/: avcodec.h  avdct.h  bsf.h  codec.h  jni.h  mediacodec.h  qsv.h  vdpau.h  videotoolbox.h  vorbis_parser.h
ffmpegdemo/src/main/cpp/include/libavfilter/: avfilter.h  buffersink.h  buffersrc.h
ffmpegdemo/src/main/cpp/include/libavformat/: avformat.h  avio.h
ffmpegdemo/src/main/cpp/include/libavutil/: aes.h  aes_ctr.h  blowfish.h  buffer.h  camellia.h  cast5.h  des.h  eval.h  ffversion.h  fifo.h  file.h  hash.h  hmac.h  hwcontext.h  hwcontext_cuda.h  hwcontext_d3d11va.h  hwcontext_opencl.h  hwcontext_vaapi.h  hwcontext_vulkan.h  imgutils.h  log.h  macros.h  mathematics.h  md5.h  murmur3.h  opt.h  parseutils.h  pixelutils.h  rc4.h  ripemd.h  sha.h  sha512.h  tea.h  threadmessage.h  tree.h  twofish.h  tx.h  xtea.h
ffmpegdemo/src/main/cpp/include/libswresample/: swresample.h
ffmpegdemo/src/main/cpp/include/libswscale/: swscale.h
ffmpegdemo/src/main/res/layout/: activity_main.xml
ffmpegdemo/src/main/res/values/: themes.xml
flowdemo/: build.gradle
flowdemo/src/main/res/values/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
livedata/: README.md  build.gradle
livedata/src/main/: AndroidManifest.xml
livedata/src/main/res/drawable/: ic_error.xml
livedata/src/main/res/layout/: activity_main.xml
livedata/src/main/res/values/: strings.xml
officialtutorial/: build.gradle
officialtutorial/src/main/: AndroidManifest.xml
officialtutorial/src/main/res/values/: strings.xml
rtmpdemo/: build.gradle
rtmpdemo/debug/: output-metadata.json
rtmpdemo/release/: output-metadata.json
rtmpdemo/src/main/: AndroidManifest.xml
rtmpdemo/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  SafeQueue.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp
rtmpdemo/src/main/cpp/librtmp/: CMakeLists.txt  rtmp.c
webrtcapp/: build.gradle
webrtcapp/debug/: output-metadata.json
webrtcapp/src/main/: AndroidManifest.xml
(+159 files in other folders)
